Remove extra docker compose file

--- a/data-modeling/notebooks/l1-demo-2-creating-a-table-with-apache-cassandra.ipynb
+++ b/data-modeling/notebooks/l1-demo-2-creating-a-table-with-apache-cassandra.ipynb
@@ -81,7 +81,7 @@
    "metadata": {},
    "source": [
     "### Create a connection to the database\n",
-    "1. Connect to the local instance of Apache Cassandra *['127.0.0.1']*.\n",
+    "1. Connect to the local instance of Apache Cassandra *['127.0.0.1:6000']*.\n",
     "2. The connection reaches out to the database (*studentdb*) and uses the correct privileges to connect to the database (*user and password = student*).\n",
     "3. Once we get back the cluster object, we need to connect and that will create our session that we will use to execute queries.<BR><BR>\n",
     "    \n",
@@ -102,9 +102,11 @@
     }
    ],
    "source": [
-    "# i'm running single node, dockerized cassandra version\n",
-    "# i create a `cassandra-net` network for this docker version, which is what i'm specify here.\n",
-    "# other value would be 127.0.0.1 for locally installed instance\n",
+    "# before running this, I already start up the cassandra container\n",
+    "# the container is configured with its port 9042 mapped to port 6000 of the host machine\n",
+    "# since this notebook is running on the host machine, it needs to specify the mapped port 6000\n",
+    "# when trying to connect to the cassandra container.\n",
+    "# you can change the host port to other value if you want\n",
     "from cassandra.cluster import Cluster\n",
     "try: \n",
     "    cluster = Cluster(['127.0.0.1'], port=6000) #If you have a locally installed Apache Cassandra instance\n",
