Update documentation; add postgres container to docker-compose; revise postgres connection string for postgres notebook

--- a/data-modeling/notebooks/l1-demo-1-creating-a-table-with-postgres.ipynb
+++ b/data-modeling/notebooks/l1-demo-1-creating-a-table-with-postgres.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_connection_string = \"host=127.0.0.1 dbname=postgres user=postgres\""
+    "db_connection_string = \"host=127.0.0.1 port=7000 dbname=postgres user=postgres password=let'sgo\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_connection_string = \"host=127.0.0.1 dbname=udacity user=postgres\""
+    "db_connection_string = \"host=127.0.0.1 port=7000 dbname=udacity user=postgres password=let'sgo\""
    ]
   },
   {
@@ -190,7 +190,7 @@
     "    print(e)\n",
     "  \n",
     "try: \n",
-    "    conn = psycopg2.connect(db_connection_string    )\n",
+    "    conn = psycopg2.connect(db_connection_string)\n",
     "except psycopg2.Error as e: \n",
     "    print(\"Error: Could not make connection to the Postgres database\")\n",
     "    print(e)\n",
