--- a/data-modeling/notebooks/l1-demo-1-creating-a-table-with-postgres.ipynb
+++ b/data-modeling/notebooks/l1-demo-1-creating-a-table-with-postgres.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_connection_string = \"host=127.0.0.1 port=7000 dbname=postgres user=postgres password=let'sgo\""
+    "db_connection_string = \"host=127.0.0.1 port=5000 dbname=postgres user=postgres password=password\""
    ]
   },
   {
