Complete data modeling ETL module and notebook

--- a/data-modeling/project-template/test.ipynb
+++ b/data-modeling/project-template/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql postgresql://student:student@127.0.0.1/sparkifydb"
+    "%sql postgresql://student:student@127.0.0.1:5000/sparkifydb"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.6-final"
   }
  },
  "nbformat": 4,
