Use default port number for postgresl database on host machine

--- a/data-modeling/project-template/etl.ipynb
+++ b/data-modeling/project-template/etl.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = psycopg2.connect(\"host=127.0.0.1 port=5000 dbname=sparkifydb user=student password=student\")\n",
+    "conn = psycopg2.connect(\"host=127.0.0.1 dbname=sparkifydb user=student password=student\")\n",
     "cur = conn.cursor()"
    ]
   },
