Add documentation and reorganizing cells

--- a/data-modeling/etl-pipeline/data-modeling-with-cassandra.ipynb
+++ b/data-modeling/etl-pipeline/data-modeling-with-cassandra.ipynb
@@ -1,33 +1,52 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "source": [
-    "# Part I. ETL Pipeline for Pre-Processing the Files"
-   ]
+    "## Cassandra database Model for Analyzing Songs And User Listening Activities"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "The event data, collected by Sparkify Music Streaming app, is comprised of CSV files for one day per file, stored in /data/event_data/ directory.\n",
+    "\n",
+    "This project design a NoSQL database using Apache Cassandra to analyze the data collected on songs and user activity on by Sparkify''s new music streaming app. This database is designed to allow the analysis team to query the data to understand what songs users are listening to. \n",
+    "\n",
+    "This notebook includes two major components: \n",
+    "I. ETL pipeline for pre-processing the event files into csv file for importing into the database, and\n",
+    "II. Using the processed csv data file, design and create tables suitable for running specific queries"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PLEASE RUN THE FOLLOWING CODE FOR PRE-PROCESSING THE FILES"
+    "### Part I. ETL Pipeline for Pre-Processing the Files"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### Import Python packages "
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import Python packages \n",
     "import pandas as pd\n",
     "import cassandra\n",
     "import re\n",
@@ -47,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 39,
    "metadata": {
     "tags": []
    },
@@ -129,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +179,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>artist</th>\n      <th>firstName</th>\n      <th>gender</th>\n      <th>itemInSession</th>\n      <th>lastName</th>\n      <th>length</th>\n      <th>level</th>\n      <th>location</th>\n      <th>sessionId</th>\n      <th>song</th>\n      <th>userId</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Harmonia</td>\n      <td>Ryan</td>\n      <td>M</td>\n      <td>0</td>\n      <td>Smith</td>\n      <td>655.77751</td>\n      <td>free</td>\n      <td>San Jose-Sunnyvale-Santa Clara, CA</td>\n      <td>583</td>\n      <td>Sehr kosmisch</td>\n      <td>26</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>The Prodigy</td>\n      <td>Ryan</td>\n      <td>M</td>\n      <td>1</td>\n      <td>Smith</td>\n      <td>260.07465</td>\n      <td>free</td>\n      <td>San Jose-Sunnyvale-Santa Clara, CA</td>\n      <td>583</td>\n      <td>The Big Gundown</td>\n      <td>26</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Train</td>\n      <td>Ryan</td>\n      <td>M</td>\n      <td>2</td>\n      <td>Smith</td>\n      <td>205.45261</td>\n      <td>free</td>\n      <td>San Jose-Sunnyvale-Santa Clara, CA</td>\n      <td>583</td>\n      <td>Marry Me</td>\n      <td>26</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Sony Wonder</td>\n      <td>Samuel</td>\n      <td>M</td>\n      <td>0</td>\n      <td>Gonzalez</td>\n      <td>218.06975</td>\n      <td>free</td>\n      <td>Houston-The Woodlands-Sugar Land, TX</td>\n      <td>597</td>\n      <td>Blackbird</td>\n      <td>61</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Van Halen</td>\n      <td>Tegan</td>\n      <td>F</td>\n      <td>2</td>\n      <td>Levine</td>\n      <td>289.38404</td>\n      <td>paid</td>\n      <td>Portland-South Portland, ME</td>\n      <td>602</td>\n      <td>Best Of Both Worlds (Remastered Album Version)</td>\n      <td>80</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 131
+     "execution_count": 40
     }
    ],
    "source": [
@@ -174,71 +193,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "                artist firstName gender  itemInSession  lastName     length  \\\n",
-       "0             Harmonia      Ryan      M              0     Smith  655.77751   \n",
-       "1          The Prodigy      Ryan      M              1     Smith  260.07465   \n",
-       "2                Train      Ryan      M              2     Smith  205.45261   \n",
-       "3          Sony Wonder    Samuel      M              0  Gonzalez  218.06975   \n",
-       "4            Van Halen     Tegan      F              2    Levine  289.38404   \n",
-       "...                ...       ...    ...            ...       ...        ...   \n",
-       "6815      Foo Fighters     Rylan      M             57    George  271.38567   \n",
-       "6816        Timbiriche     Rylan      M             58    George  202.60526   \n",
-       "6817  A Perfect Circle     Rylan      M             59    George  206.05342   \n",
-       "6818          Anberlin     Rylan      M             60    George  348.68200   \n",
-       "6819         Deas Vail    Elijah      M              0     Davis  237.68771   \n",
-       "\n",
-       "     level                              location  sessionId  \\\n",
-       "0     free    San Jose-Sunnyvale-Santa Clara, CA        583   \n",
-       "1     free    San Jose-Sunnyvale-Santa Clara, CA        583   \n",
-       "2     free    San Jose-Sunnyvale-Santa Clara, CA        583   \n",
-       "3     free  Houston-The Woodlands-Sugar Land, TX        597   \n",
-       "4     paid           Portland-South Portland, ME        602   \n",
-       "...    ...                                   ...        ...   \n",
-       "6815  paid                 Birmingham-Hoover, AL       1076   \n",
-       "6816  paid                 Birmingham-Hoover, AL       1076   \n",
-       "6817  paid                 Birmingham-Hoover, AL       1076   \n",
-       "6818  paid                 Birmingham-Hoover, AL       1076   \n",
-       "6819  free           Detroit-Warren-Dearborn, MI        985   \n",
-       "\n",
-       "                                                song  userId  \n",
-       "0                                      Sehr kosmisch      26  \n",
-       "1                                    The Big Gundown      26  \n",
-       "2                                           Marry Me      26  \n",
-       "3                                          Blackbird      61  \n",
-       "4     Best Of Both Worlds (Remastered Album Version)      80  \n",
-       "...                                              ...     ...  \n",
-       "6815                                   The Pretender      16  \n",
-       "6816                                 Besos De Ceniza      16  \n",
-       "6817                                            Rose      16  \n",
-       "6818                                    The Haunting      16  \n",
-       "6819           Anything You Say (Unreleased Version)       5  \n",
-       "\n",
-       "[6820 rows x 11 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>artist</th>\n      <th>firstName</th>\n      <th>gender</th>\n      <th>itemInSession</th>\n      <th>lastName</th>\n      <th>length</th>\n      <th>level</th>\n      <th>location</th>\n      <th>sessionId</th>\n      <th>song</th>\n      <th>userId</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Harmonia</td>\n      <td>Ryan</td>\n      <td>M</td>\n      <td>0</td>\n      <td>Smith</td>\n      <td>655.77751</td>\n      <td>free</td>\n      <td>San Jose-Sunnyvale-Santa Clara, CA</td>\n      <td>583</td>\n      <td>Sehr kosmisch</td>\n      <td>26</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>The Prodigy</td>\n      <td>Ryan</td>\n      <td>M</td>\n      <td>1</td>\n      <td>Smith</td>\n      <td>260.07465</td>\n      <td>free</td>\n      <td>San Jose-Sunnyvale-Santa Clara, CA</td>\n      <td>583</td>\n      <td>The Big Gundown</td>\n      <td>26</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Train</td>\n      <td>Ryan</td>\n      <td>M</td>\n      <td>2</td>\n      <td>Smith</td>\n      <td>205.45261</td>\n      <td>free</td>\n      <td>San Jose-Sunnyvale-Santa Clara, CA</td>\n      <td>583</td>\n      <td>Marry Me</td>\n      <td>26</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Sony Wonder</td>\n      <td>Samuel</td>\n      <td>M</td>\n      <td>0</td>\n      <td>Gonzalez</td>\n      <td>218.06975</td>\n      <td>free</td>\n      <td>Houston-The Woodlands-Sugar Land, TX</td>\n      <td>597</td>\n      <td>Blackbird</td>\n      <td>61</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Van Halen</td>\n      <td>Tegan</td>\n      <td>F</td>\n      <td>2</td>\n      <td>Levine</td>\n      <td>289.38404</td>\n      <td>paid</td>\n      <td>Portland-South Portland, ME</td>\n      <td>602</td>\n      <td>Best Of Both Worlds (Remastered Album Version)</td>\n      <td>80</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>6815</th>\n      <td>Foo Fighters</td>\n      <td>Rylan</td>\n      <td>M</td>\n      <td>57</td>\n      <td>George</td>\n      <td>271.38567</td>\n      <td>paid</td>\n      <td>Birmingham-Hoover, AL</td>\n      <td>1076</td>\n      <td>The Pretender</td>\n      <td>16</td>\n    </tr>\n    <tr>\n      <th>6816</th>\n      <td>Timbiriche</td>\n      <td>Rylan</td>\n      <td>M</td>\n      <td>58</td>\n      <td>George</td>\n      <td>202.60526</td>\n      <td>paid</td>\n      <td>Birmingham-Hoover, AL</td>\n      <td>1076</td>\n      <td>Besos De Ceniza</td>\n      <td>16</td>\n    </tr>\n    <tr>\n      <th>6817</th>\n      <td>A Perfect Circle</td>\n      <td>Rylan</td>\n      <td>M</td>\n      <td>59</td>\n      <td>George</td>\n      <td>206.05342</td>\n      <td>paid</td>\n      <td>Birmingham-Hoover, AL</td>\n      <td>1076</td>\n      <td>Rose</td>\n      <td>16</td>\n    </tr>\n    <tr>\n      <th>6818</th>\n      <td>Anberlin</td>\n      <td>Rylan</td>\n      <td>M</td>\n      <td>60</td>\n      <td>George</td>\n      <td>348.68200</td>\n      <td>paid</td>\n      <td>Birmingham-Hoover, AL</td>\n      <td>1076</td>\n      <td>The Haunting</td>\n      <td>16</td>\n    </tr>\n    <tr>\n      <th>6819</th>\n      <td>Deas Vail</td>\n      <td>Elijah</td>\n      <td>M</td>\n      <td>0</td>\n      <td>Davis</td>\n      <td>237.68771</td>\n      <td>free</td>\n      <td>Detroit-Warren-Dearborn, MI</td>\n      <td>985</td>\n      <td>Anything You Say (Unreleased Version)</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n<p>6820 rows × 11 columns</p>\n</div>"
+       "(6820, 11)"
+      ]
      },
      "metadata": {},
-     "execution_count": 132
+     "execution_count": 41
     }
    ],
    "source": [
-    "df"
+    "df.shape"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part II. Complete the Apache Cassandra coding portion of your project. \n",
+    "### Part II. Complete the Apache Cassandra coding portion of your project. \n",
     "\n",
-    "## Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
+    "#### Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
     "- artist \n",
     "- firstName of user\n",
     "- gender of user\n",
@@ -260,19 +239,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Begin writing your Apache Cassandra code in the cells below"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Creating a Cluster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,29 +307,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create queries to ask the following three questions of the data\n",
-    "\n",
-    "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
-    "\n",
-    "\n",
-    "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
-    "    \n",
-    "\n",
-    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "\n",
-    "\n"
+    "#### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,8 +395,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create queries to ask the following three questions of the data\n",
+    "\n",
+    "#### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
+    "\n",
+    "\n",
+    "#### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "    \n",
+    "\n",
+    "#### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 46,
    "metadata": {
     "tags": []
    },
@@ -450,7 +422,15 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "===== Query: =======\n\n    SELECT artist, song, length\n    FROM music_app_history\n    WHERE sessionId=338 AND itemInSession=4\n\n===== Results: =====\nRow(artist='Faithless', song='Music Matters (Mark Knight Dub)', length=495.30731201171875)\n"
+      "CREATE TABLE IF NOT EXISTS music_app_history (sessionId int, itemInSession int, artist text, song text, length float, PRIMARY KEY ((sessionId, itemInSession)))\n",
+      "===== Query: =======\n",
+      "\n",
+      "    SELECT artist, song, length\n",
+      "    FROM music_app_history\n",
+      "    WHERE sessionId=338 AND itemInSession=4\n",
+      "\n",
+      "===== Results: =====\n",
+      "Row(artist='Faithless', song='Music Matters (Mark Knight Dub)', length=495.30731201171875)\n"
      ]
     }
    ],
@@ -478,22 +458,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "===== Query: =======\n\n    SELECT artist, song, firstName, lastName\n    FROM music_app_history\n    WHERE userId=10 AND sessionId=182 \n    ORDER BY itemInSession\n\n===== Results: =====\nRow(artist='Down To The Bone', song=\"Keep On Keepin' On\", firstname='Sylvie', lastname='Cruz')\nRow(artist='Three Drives', song='Greece 2000', firstname='Sylvie', lastname='Cruz')\nRow(artist='Sebastien Tellier', song='Kilometer', firstname='Sylvie', lastname='Cruz')\nRow(artist='Lonnie Gordon', song='Catch You Baby (Steve Pitron & Max Sanna Radio Edit)', firstname='Sylvie', lastname='Cruz')\n"
+      "CREATE TABLE IF NOT EXISTS music_app_history (userId int, sessionId int, itemInSession int, artist text, song text, firstName text, lastName text, PRIMARY KEY ((userId, sessionId), itemInSession))\n",
+      "===== Query: =======\n",
+      "\n",
+      "    SELECT artist, song, firstName, lastName\n",
+      "    FROM music_app_history\n",
+      "    WHERE userId=10 AND sessionId=182 \n",
+      "    ORDER BY itemInSession\n",
+      "\n",
+      "===== Results: =====\n",
+      "Row(artist='Down To The Bone', song=\"Keep On Keepin' On\", firstname='Sylvie', lastname='Cruz')\n",
+      "Row(artist='Three Drives', song='Greece 2000', firstname='Sylvie', lastname='Cruz')\n",
+      "Row(artist='Sebastien Tellier', song='Kilometer', firstname='Sylvie', lastname='Cruz')\n",
+      "Row(artist='Lonnie Gordon', song='Catch You Baby (Steve Pitron & Max Sanna Radio Edit)', firstname='Sylvie', lastname='Cruz')\n"
      ]
     }
    ],
@@ -519,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -562,12 +547,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Drop the tables before closing out the sessions"
+    "#### Drop the tables before closing out the sessions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,12 +564,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Close the session and cluster connection¶"
+    "#### Close the session and cluster connection¶"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
