Use different table names as requested in project requirement

--- a/data-modeling/etl-pipeline/data-modeling-with-cassandra.ipynb
+++ b/data-modeling/etl-pipeline/data-modeling-with-cassandra.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "source": [
     "## Cassandra database Model for Analyzing Songs And User Listening Activities"
    ],
@@ -43,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -148,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -179,21 +172,17 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>artist</th>\n      <th>firstName</th>\n      <th>gender</th>\n      <th>itemInSession</th>\n      <th>lastName</th>\n      <th>length</th>\n      <th>level</th>\n      <th>location</th>\n      <th>sessionId</th>\n      <th>song</th>\n      <th>userId</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Harmonia</td>\n      <td>Ryan</td>\n      <td>M</td>\n      <td>0</td>\n      <td>Smith</td>\n      <td>655.77751</td>\n      <td>free</td>\n      <td>San Jose-Sunnyvale-Santa Clara, CA</td>\n      <td>583</td>\n      <td>Sehr kosmisch</td>\n      <td>26</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>The Prodigy</td>\n      <td>Ryan</td>\n      <td>M</td>\n      <td>1</td>\n      <td>Smith</td>\n      <td>260.07465</td>\n      <td>free</td>\n      <td>San Jose-Sunnyvale-Santa Clara, CA</td>\n      <td>583</td>\n      <td>The Big Gundown</td>\n      <td>26</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Train</td>\n      <td>Ryan</td>\n      <td>M</td>\n      <td>2</td>\n      <td>Smith</td>\n      <td>205.45261</td>\n      <td>free</td>\n      <td>San Jose-Sunnyvale-Santa Clara, CA</td>\n      <td>583</td>\n      <td>Marry Me</td>\n      <td>26</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Sony Wonder</td>\n      <td>Samuel</td>\n      <td>M</td>\n      <td>0</td>\n      <td>Gonzalez</td>\n      <td>218.06975</td>\n      <td>free</td>\n      <td>Houston-The Woodlands-Sugar Land, TX</td>\n      <td>597</td>\n      <td>Blackbird</td>\n      <td>61</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Van Halen</td>\n      <td>Tegan</td>\n      <td>F</td>\n      <td>2</td>\n      <td>Levine</td>\n      <td>289.38404</td>\n      <td>paid</td>\n      <td>Portland-South Portland, ME</td>\n      <td>602</td>\n      <td>Best Of Both Worlds (Remastered Album Version)</td>\n      <td>80</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 40
+     "execution_count": 4
     }
    ],
    "source": [
-    "# check the number of rows in your csv file\n",
-    "#with open(processed_events_file, 'r', encoding = 'utf8') as f:\n",
-    "#    print(sum(1 for line in f))\n",
-    "\n",
     "df = pd.read_csv(processed_events_file, header=0)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +193,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 41
+     "execution_count": 5
     }
    ],
    "source": [
@@ -244,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,9 +333,10 @@
     "        ## append clustering keys for sorting if given\n",
     "        if clustering_keys is not None:\n",
     "            create_stmt = create_stmt + f\", {', '.join(clustering_keys)}\"\n",
+    "        \n",
     "        create_stmt = create_stmt + \"))\"\n",
-    "\n",
     "        print(create_stmt)\n",
+    "        \n",
     "        ## execute create operation\n",
     "        session.execute(create_stmt)\n",
     "    except Exception as e:\n",
@@ -413,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -422,11 +412,11 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CREATE TABLE IF NOT EXISTS music_app_history (sessionId int, itemInSession int, artist text, song text, length float, PRIMARY KEY ((sessionId, itemInSession)))\n",
+      "CREATE TABLE IF NOT EXISTS song_history_by_session (sessionId int, itemInSession int, artist text, song text, length float, PRIMARY KEY ((sessionId, itemInSession)))\n",
       "===== Query: =======\n",
       "\n",
       "    SELECT artist, song, length\n",
-      "    FROM music_app_history\n",
+      "    FROM song_history_by_session\n",
       "    WHERE sessionId=338 AND itemInSession=4\n",
       "\n",
       "===== Results: =====\n",
@@ -437,40 +427,40 @@
    "source": [
     "## Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
     "## sessionId = 338, and itemInSession = 4\n",
-    "table_name = \"music_app_history\"\n",
+    "table_1 = \"song_history_by_session\"\n",
     "\n",
     "## create a table for storing data\n",
     "create_table(session, \n",
-    "    table_name=table_name, \n",
+    "    table_name=table_1, \n",
     "    table_columns=[('sessionId','int'), ('itemInSession','int'), ('artist','text'), ('song','text'), ('length','float')], \n",
     "    primary_keys=('sessionId', 'itemInSession')\n",
     ")\n",
     "\n",
     "## populate the table with data extracted from given data file\n",
-    "populate_table(session, table_name, ['sessionId', 'itemInSession', 'artist', 'song', 'length'])\n",
+    "populate_table(session, table_1, ['sessionId', 'itemInSession', 'artist', 'song', 'length'])\n",
     "\n",
     "## Add in the SELECT statement to verify the data was entered into the table\n",
     "query = f\"\"\"\n",
     "    SELECT artist, song, length\n",
-    "    FROM {table_name}\n",
+    "    FROM {table_1}\n",
     "    WHERE sessionId=338 AND itemInSession=4\"\"\"\n",
     "fetch(session, query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CREATE TABLE IF NOT EXISTS music_app_history (userId int, sessionId int, itemInSession int, artist text, song text, firstName text, lastName text, PRIMARY KEY ((userId, sessionId), itemInSession))\n",
+      "CREATE TABLE IF NOT EXISTS song_history_by_user_session (sessionId int, userId int, itemInSession int, artist text, song text, firstName text, lastName text, PRIMARY KEY ((sessionId, userId), itemInSession))\n",
       "===== Query: =======\n",
       "\n",
       "    SELECT artist, song, firstName, lastName\n",
-      "    FROM music_app_history\n",
+      "    FROM song_history_by_user_session\n",
       "    WHERE userId=10 AND sessionId=182 \n",
       "    ORDER BY itemInSession\n",
       "\n",
@@ -485,18 +475,19 @@
    "source": [
     "## Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
     "## for userid = 10, sessionid = 182\n",
+    "table_2 = \"song_history_by_user_session\"\n",
     "create_table(session, \n",
-    "    table_name=table_name, \n",
-    "    table_columns=[('userId','int'), ('sessionId','int'), ('itemInSession','int'), ('artist','text'), ('song','text'), ('firstName','text'), ('lastName','text')], \n",
-    "    primary_keys=['userId', 'sessionId'],\n",
+    "    table_name=table_2, \n",
+    "    table_columns=[('sessionId','int'), ('userId','int'), ('itemInSession','int'), ('artist','text'), ('song','text'), ('firstName','text'), ('lastName','text')], \n",
+    "    primary_keys=['sessionId', 'userId'],\n",
     "    clustering_keys=['itemInSession']\n",
     ")\n",
     "\n",
-    "populate_table(session, table_name, ['userId', 'sessionId', 'itemInSession', 'artist', 'song', 'firstName', 'lastName'])\n",
+    "populate_table(session, table_2, ['sessionId', 'userId', 'itemInSession', 'artist', 'song', 'firstName', 'lastName'])\n",
     "\n",
     "query = f\"\"\"\n",
     "    SELECT artist, song, firstName, lastName\n",
-    "    FROM {table_name}\n",
+    "    FROM {table_2}\n",
     "    WHERE userId=10 AND sessionId=182 \n",
     "    ORDER BY itemInSession\"\"\"\n",
     "fetch(session, query)"
@@ -504,18 +495,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CREATE TABLE IF NOT EXISTS music_app_history (song text, userId int, firstName text, lastName text, PRIMARY KEY ((song), userId))\n",
+      "CREATE TABLE IF NOT EXISTS song_listened_by_users (song text, userId int, firstName text, lastName text, PRIMARY KEY ((song), userId))\n",
       "===== Query: =======\n",
       "\n",
       "    SELECT firstName, lastName \n",
-      "    FROM music_app_history \n",
+      "    FROM song_listened_by_users \n",
       "    WHERE song='All Hands Against His Own'\n",
       "\n",
       "===== Results: =====\n",
@@ -527,18 +518,19 @@
    ],
    "source": [
     "## Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "table_3 = \"song_listened_by_users\"\n",
     "create_table(session, \n",
-    "    table_name=table_name, \n",
+    "    table_name=table_3, \n",
     "    table_columns=[('song','text'), ('userId','int'), ('firstName','text'), ('lastName','text')], \n",
     "    primary_keys=['song'],\n",
     "    clustering_keys=['userId']\n",
     ")\n",
     "\n",
-    "populate_table(session, table_name, ['song', 'userId', 'firstName', 'lastName'])\n",
+    "populate_table(session, table_3, ['song', 'userId', 'firstName', 'lastName'])\n",
     "\n",
     "query = f\"\"\"\n",
     "    SELECT firstName, lastName \n",
-    "    FROM {table_name} \n",
+    "    FROM {table_3} \n",
     "    WHERE song='All Hands Against His Own'\"\"\"\n",
     "fetch(session, query)               "
    ]
@@ -552,12 +544,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Drop the table before closing out the sessions\n",
-    "drop_table(session, table_name)\n"
+    "## Drop the tables before closing out the sessions\n",
+    "for table in [table_1, table_2, table_3]:\n",
+    "    drop_table(session, table)\n"
    ]
   },
   {
@@ -569,20 +562,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "session.shutdown()\n",
     "cluster.shutdown()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
